# starling

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
admin-web/: .env.example  docker-compose.yml
admin-web/backend/: Dockerfile  package-lock.json  package.json
admin-web/backend/src/: email.ts  server.ts  vat.ts
admin-web/backend/src/routes/: billing.ts  flags.ts  gdpr.ts  legal.ts  waitlist.ts
admin-web/frontend/: index.html
admin-web/frontend/css/: admin.css
admin-web/frontend/js/: admin.js
admin-web/migrations/: V1__mwt_admin.sql  V2__cancellation_and_deletion.sql  V3__vat_oss.sql  V4__tax_region.sql  V5__country_availability.sql  V6__fixups.sql
client/: .env.example  .env.local  .env.local.example  SECURITY_AUDIT.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
client/.impeccable/: hook.cache.json
client/src/: App.svelte  app.css  main.ts  vite-env.d.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/.impeccable/: hook.cache.json
client/src-tauri/capabilities/: default.json  mobile.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs  main.rs
client/src-tauri/src/commands/: crypto.rs  mod.rs  notifications.rs  og.rs  storage.rs
client/src/lib/: audio.ts  config.ts
client/src/lib/actions/: clickOutside.ts
client/src/lib/components/calling/: CallOverlay.svelte
client/src/lib/components/chat/: AudioBubble.svelte  BubbleMenu.svelte  EmojiPicker.svelte  FileBubble.svelte  GifPicker.svelte  LinkPreview.svelte  MessageBubble.svelte  PollBubble.svelte  PollBuilder.svelte  VoiceRecorder.svelte  WallpaperPicker.svelte
client/src/lib/components/contact/: AddContactModal.svelte  ContactGroup.svelte  ContactItem.svelte  CreateBroadcastModal.svelte  CreateGroupModal.svelte
client/src/lib/components/effects/: EffectOverlay.svelte
client/src/lib/components/layout/: ChatPanel.svelte  ContactPanel.svelte  ContextPanel.svelte
client/src/lib/components/legal/: LegalModal.svelte
client/src/lib/components/qr/: LinkDeviceModal.svelte  MyQrModal.svelte  QrDisplay.svelte  QrScanner.svelte
client/src/lib/components/settings/: SwitchRelayModal.svelte
client/src/lib/components/ui/: Avatar.svelte  BirdIcon.svelte  ColoredName.svelte  LegalModal.svelte  Modal.svelte  StatusDot.svelte  ToastStack.svelte
client/src/lib/crypto/: index.ts
client/src/lib/i18n/: en.json  index.ts
client/src/lib/stores/: auth.ts  broadcasts.ts  calling.ts  chats.ts  contacts.ts  effects.ts  groups.ts  lockTimer.ts  mobile.ts  notifications.ts  relay.ts  router.ts  settings.ts  sync.ts
client/src/lib/types/: effects.ts
client/src/lib/utils/: backup.ts  clipboard.ts  coloredName.ts  deeplink.ts  disappear.ts  markdown.ts  og.ts  qr.ts  sync.ts  tauri.ts  uuid.ts
client/src/routes/main/: Main.svelte
client/src/routes/onboarding/: AccountCreated.svelte  AgeGate.svelte  Loading.svelte  LocalUnlockSetup.svelte  RecoveryConfirm.svelte  RecoveryPhrase.svelte  RelayPicker.svelte  RestoreAccount.svelte  Unlock.svelte  Welcome.svelte
client/src/routes/settings/: Settings.svelte
client/src/test/: contacts.test.ts  crypto.test.ts  groups.test.ts  setup.ts
crates/mwt-admin/: Cargo.toml
crates/mwt-client/: Cargo.toml
crates/mwt-crypto/: Cargo.toml
crates/mwt-crypto/src/: error.rs  identity.rs  keys.rs  lib.rs  padding.rs  pin.rs  ratchet.rs  recovery.rs  x3dh.rs
crates/mwt-relay/: Cargo.toml  Dockerfile
crates/mwt-relay/src/: auth.rs  config.rs  main.rs  tier.rs
crates/mwt-relay/src/routes/: account.rs  add_request.rs  auth.rs  bot.rs  channels.rs  devices.rs  identity.rs  info.rs  messages.rs  mod.rs  og.rs  prekeys.rs  register.rs  turn_creds.rs
crates/mwt-relay/src/store/: accounts.rs  channels.rs  devices.rs  mod.rs  prekeys.rs  send_tokens.rs
