[package]
name = "mwt-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "mwt_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                      = { version = "2", features = [] }
tauri-plugin-shell         = "2"
tauri-plugin-notification  = "2"
tauri-plugin-haptics       = "2"
tauri-plugin-biometric     = "2"
tauri-plugin-deep-link     = "2"
tauri-plugin-dialog        = "2"
mwt-crypto                 = { path = "../../crates/mwt-crypto" }
serde                      = { workspace = true }
serde_json                 = { workspace = true }
anyhow                     = { workspace = true }
reqwest                    = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "http2"] }
tracing                    = { workspace = true }
hex                        = "0.4"
ed25519-dalek              = { version = "2", features = ["rand_core"] }
x25519-dalek               = { version = "2", features = ["static_secrets"] }
